.cargo-home/registry/src/index.crates.io-1949cf8c6b5b557f/insta-1.43.1/tests/snapshots/test_redaction__foo_bar.snap
---
source: insta/tests/test_redaction.rs
expression: "Selector :: parse(\".foo.bar\").unwrap()"
---
Selector {
    selectors: [
        [
            Key(
                "foo",
            ),
            Key(
                "bar",
            ),
        ],
    ],
}
