.cargo-home/registry/src/index.crates.io-1949cf8c6b5b557f/insta-1.43.1/tests/snapshots/test_redaction__foo_bar_range.snap
---
source: insta/tests/test_redaction.rs
expression: "Selector :: parse(\".foo.bar[10:20]\").unwrap()"
---
Selector {
    selectors: [
        [
            Key(
                "foo",
            ),
            Key(
                "bar",
            ),
            Range(
                Some(
                    10,
                ),
                Some(
                    20,
                ),
            ),
        ],
    ],
}
