.cargo-home/registry/src/index.crates.io-1949cf8c6b5b557f/insta-1.43.1/tests/snapshots/test_redaction__map_key_redaction.snap
---
source: insta/tests/test_redaction.rs
expression: foo_value
---
hm:
  ? bucket: "[bucket]"
    value: 0
  : 42
btm:
  "[key]": 23
