.cargo-home/registry/src/index.crates.io-1949cf8c6b5b557f/insta-1.43.1/tests/snapshots/test_redaction__named_redacted_debug_expr.snap
---
source: insta/tests/test_redaction.rs
expression: This is a custom debug expression for the snapshot
---
id: "[id]"
items:
  - one
  - two
  - three
metadata:
  count: 42
  version: 123
