.cargo-home/registry/src/index.crates.io-1949cf8c6b5b557f/insta-1.43.1/tests/snapshots/test_redaction__rounded_redaction.snap
---
source: insta/tests/test_redaction.rs
expression: "&MyPoint { x: 1.0 / 3.0, y: 6.0 / 3.0, }"
---
{
  "x": 0.3333,
  "y": 2.0
}
