.cargo-home/registry/src/index.crates.io-1949cf8c6b5b557f/insta-1.43.1/tests/snapshots/test_redaction__struct_array_redaction.snap
---
source: insta/tests/test_redaction.rs
expression: "vec![checkout]"
---
- _id: "[checkout_id]"
  products:
    - _id: "[product_id]"
      product_name: "[product_name]"
    - _id: "[product_id]"
      product_name: "[product_name]"
